--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
 <body class="bg-gray-50 text-gray-900 min-h-screen">
   <div id="root"></div>
-
-  <!-- 🔴 THIS WAS MISSING -->
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="/src/index.tsc"></script>
 </body>
 </html>
