--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 <body class="bg-gray-50 text-gray-900 min-h-screen">
   <div id="root"></div>
-  <script type="module" src="/src/index.tsc"></script>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
