--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Pothole Detection System</title>
+  <meta name="description" content="Smart Pothole Detection — AI-powered system for detecting and reporting road potholes." />
+  <meta name="theme-color" content="#0ea5a4" />
+  <title>Smart Pothole Detection</title>
+
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="manifest" href="/manifest.json" />
 
   <!-- Tailwind CDN (warning is OK for now) -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-gray-50 text-gray-900 min-h-screen">
-  <div id="root"></div>
-  <script type="module" src="/src/index.tsx"></script>
+  <div id="root" role="main" class="container mx-auto p-4">
+    <noscript class="text-red-600">This app requires JavaScript. Please enable JavaScript in your browser.</noscript>
+  </div>
+  <script type="module" src="./src/index.tsx"></script>
 </body>
 </html>
